--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,32 @@
 }
 
 @theme {
+  /* Fonts */
   --font-montserrat: "Montserrat", "system-ui", "serif";
   --font-ddt: "ddt", "system-ui", "sans-serif";
   --font-ddt-extended: "ddt-extended", "system-ui", "sans-serif";
+
+  /* Animations */
+  --animate-accordion-open: accordionOpen 300ms cubic-bezier(0.87, 0, 0.13, 1);
+  --animate-accordion-close: accordionClose 300ms cubic-bezier(0.87, 0, 0.13, 1);
+
+  @keyframes accordionOpen {
+    from {
+      height: 0;
+    }
+    to {
+      height: var(--radix-accordion-content-height);
+    }
+  }
+
+  @keyframes accordionClose {
+    from {
+      height: var(--radix-accordion-content-height);
+    }
+    to {
+      height: 0;
+    }
+  }
 }
 
 .section-padding {
