feat(dashboard): add wallet settings

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,14 @@
     forwards;
   --animate-sidebar-close: sidebarClose 300ms cubic-bezier(0.87, 0, 0.13, 1)
     forwards;
+  --animate-dropdown-top: dropdownSlideDownAndFade 400ms
+    cubic-bezier(0.16, 1, 0.3, 1) forwards;
+  --animate-dropdown-right: dropdownSlideLeftAndFade 400ms
+    cubic-bezier(0.16, 1, 0.3, 1) forwards;
+  --animate-dropdown-bottom: dropdownSlideUpAndFade 400ms
+    cubic-bezier(0.16, 1, 0.3, 1) forwards;
+  --animate-dropdown-left: dropdownSlideRightAndFade 400ms
+    cubic-bezier(0.16, 1, 0.3, 1) forwards;
 
   @keyframes accordionOpen {
     from {
@@ -66,6 +74,50 @@
     }
     to {
       transform: translateX(-100%);
+    }
+  }
+
+  @keyframes dropdownSlideDownAndFade {
+    from {
+      opacity: 0;
+      transform: translateY(-2px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes dropdownSlideLeftAndFade {
+    from {
+      opacity: 0;
+      transform: translateX(2px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes dropdownSlideUpAndFade {
+    from {
+      opacity: 0;
+      transform: translateY(2px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes dropdownSlideRightAndFade {
+    from {
+      opacity: 0;
+      transform: translateX(-2px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
     }
   }
 }
